[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/main_menu/difficulty_selection.gd" type="Script" id=1]
[ext_resource path="res://new_theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/assets/Menu-2.png" type="Texture" id=3]
[ext_resource path="res://scenes/assets/Button_child_1.png" type="Texture" id=4]
[ext_resource path="res://scenes/assets/Button_child_2.png" type="Texture" id=5]
[ext_resource path="res://scenes/assets/Button_exit.png" type="Texture" id=6]
[ext_resource path="res://scenes/assets/Button_exit_hovered.png" type="Texture" id=7]
[ext_resource path="res://scenes/assets/Button_child_1_hovered.png" type="Texture" id=8]
[ext_resource path="res://scenes/assets/Button_child_2_hovered.png" type="Texture" id=9]
[ext_resource path="res://scenes/assets/Button_exit_pressed.png" type="Texture" id=10]
[ext_resource path="res://scenes/assets/Button_child_2_pressed.png" type="Texture" id=11]
[ext_resource path="res://scenes/assets/Button_child_1_pressed.png" type="Texture" id=12]
[ext_resource path="res://scenes/gui/fader.tscn" type="PackedScene" id=13]

[node name="DifficultySelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlReturn" type="Control" parent="."]
anchor_right = 0.1
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ControlReturn"]
margin_right = 100.0
margin_bottom = 100.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonReturn" type="TextureButton" parent="ControlReturn/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 95.0
margin_bottom = 95.0
rect_min_size = Vector2( 70, 70 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 7 )
expand = true

[node name="Control" type="Control" parent="."]
anchor_left = 0.1
anchor_top = 0.05
anchor_right = 0.9
anchor_bottom = 0.95
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlEasy" type="Control" parent="Control"]
anchor_right = 0.5
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ControlEasy"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control/ControlEasy/VBoxContainer"]
margin_top = 79.0
margin_right = 409.0
margin_bottom = 379.0

[node name="MarginContainer" type="MarginContainer" parent="Control/ControlEasy/VBoxContainer/CenterContainer"]
margin_left = 54.0
margin_right = 354.0
margin_bottom = 300.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="ButtonEasy" type="TextureButton" parent="Control/ControlEasy/VBoxContainer/CenterContainer/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 275.0
margin_bottom = 275.0
rect_min_size = Vector2( 250, 250 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 8 )
expand = true

[node name="CenterContainer2" type="CenterContainer" parent="Control/ControlEasy/VBoxContainer"]
margin_top = 383.0
margin_right = 409.0
margin_bottom = 461.0

[node name="MarginContainer" type="MarginContainer" parent="Control/ControlEasy/VBoxContainer/CenterContainer2"]
margin_left = 80.0
margin_right = 328.0
margin_bottom = 78.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="LabelEasy" type="Label" parent="Control/ControlEasy/VBoxContainer/CenterContainer2/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 223.0
margin_bottom = 53.0
mouse_filter = 0
text = "Супер легко"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlMedium" type="Control" parent="Control"]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ControlMedium"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control/ControlMedium/VBoxContainer"]
margin_top = 79.0
margin_right = 409.0
margin_bottom = 379.0

[node name="MarginContainer" type="MarginContainer" parent="Control/ControlMedium/VBoxContainer/CenterContainer"]
margin_left = 54.0
margin_right = 354.0
margin_bottom = 300.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="ButtonMedium" type="TextureButton" parent="Control/ControlMedium/VBoxContainer/CenterContainer/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 275.0
margin_bottom = 275.0
rect_min_size = Vector2( 250, 250 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 9 )
expand = true

[node name="CenterContainer2" type="CenterContainer" parent="Control/ControlMedium/VBoxContainer"]
margin_top = 383.0
margin_right = 409.0
margin_bottom = 461.0

[node name="MarginContainer" type="MarginContainer" parent="Control/ControlMedium/VBoxContainer/CenterContainer2"]
margin_left = 123.0
margin_right = 286.0
margin_bottom = 78.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="LabelMedium" type="Label" parent="Control/ControlMedium/VBoxContainer/CenterContainer2/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 138.0
margin_bottom = 53.0
mouse_filter = 0
text = "Средне"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fader" parent="." instance=ExtResource( 13 )]

[connection signal="pressed" from="ControlReturn/MarginContainer/ButtonReturn" to="." method="_on_ButtonReturn_pressed"]
[connection signal="pressed" from="Control/ControlEasy/VBoxContainer/CenterContainer/MarginContainer/ButtonEasy" to="." method="_on_ButtonEasy_pressed"]
[connection signal="gui_input" from="Control/ControlEasy/VBoxContainer/CenterContainer2/MarginContainer/LabelEasy" to="." method="_on_LabelEasy_gui_input"]
[connection signal="pressed" from="Control/ControlMedium/VBoxContainer/CenterContainer/MarginContainer/ButtonMedium" to="." method="_on_ButtonMedium_pressed"]
[connection signal="gui_input" from="Control/ControlMedium/VBoxContainer/CenterContainer2/MarginContainer/LabelMedium" to="." method="_on_LabelMedium_gui_input"]
